# neurust-workspace

./: .gitignore  Cargo.toml  Dockerfile  PROJECT_GOALS.md
neurust-cli/: Cargo.toml
neurust-cli/src/: main.rs
neurust-cli/src/api/: client.rs
neurust-cli/src/commands/: ask.rs  audit.rs  auth.rs  create.rs  keygen.rs  mod.rs  solana_cmd.rs
neurust-cli/src/utils/: cmd.rs  context.rs  deps.rs  diff.rs  executor.rs  fs.rs  memory.rs  mod.rs  repl.rs
neurust-server/: Cargo.toml  docker-compose.yml
neurust-server/data/: sources.json
neurust-server/migrations/: 20241214000000_init_auth_schema.sql
neurust-server/src/: db.rs  knowledge.rs  main.rs  models.rs  prompts.rs  sources.rs
neurust-server/src/handlers/: agent.rs  auth.rs  health.rs  mod.rs  payment.rs  project.rs  tool.rs  user.rs
neurust-server/src/middleware/: auth.rs
neurust-server/src/services/: ai.rs  billing.rs  knowledge_store.rs  mod.rs  scheduler.rs  scraper.rs
neurust-vscode/: package-lock.json  package.json  tsconfig.json
neurust-vscode/src/: ChatViewProvider.ts  extension.ts
neurust-web/: package-lock.json  package.json  tailwind.config.ts
neurust-web/app/: layout.tsx  page.tsx
neurust-web/app/context/: auth-context.tsx
neurust-web/app/dashboard/: layout.tsx  page.tsx
neurust-web/app/login/: page.tsx
neurust-web/components/chat/: chat-interface.tsx
neurust-web/components/dashboard/: create-project-modal.tsx
neurust-web/components/landing/: features.tsx  hero.tsx
neurust-web/components/layout/: navbar.tsx  wallet-nav.tsx
neurust-web/data/: projects.json
(+10 files in other folders)
