[package]
name = "neurust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
serde = { workspace = true }
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = "0.15"
solana-sdk = { workspace = true }
html2text = "0.6"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "migrate","uuid"] }
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12.11", features = ["future"] }
rand = "0.9.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto", "use_pem"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
